[package]
name = "organisation"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "organisation"
path = "src/main.rs"

[[bin]]
name = "start-the-world"
path = "src/bin/start-the-world/main.rs"

[dependencies]
# ethereum
ethers = { version = "1.0.0", features = ["legacy"] }
ethers-signers = "1.0.0"

# graph
petgraph = "0.6.2"

# telemetry
log = "0.4.17"
color-eyre = "0.6.0"
pretty_env_logger = "0.4.0"

# configuration
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
lazy_static = "1.4.0"

# async
tokio = { version = "1.23.0", features = ["full"] }

# dev tools
itertools = "0.10.5"
chrono = "0.4.23"
async-trait = "0.1.60"

# testing
[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.11"
pretty_assertions = "1"
