[package]
name = "organisation"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "organisation"
path = "src/bin/organisation/main.rs"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator/main.rs"

[dependencies]
# ethereum
ethers = { version = "2.0.1", features = ["legacy"] }
ethers-signers = "2.0.1"
ethers-providers = "2.0.1"

# graph
petgraph = "0.6.2"

# telemetry
log = "0.4.17"
color-eyre = "0.6.0"
pretty_env_logger = "0.4.0"

# configuration
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
lazy_static = "1.4.0"

# async
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.27"

# dev tools
itertools = "0.10.5"
chrono = "0.4.23"
async-trait = "0.1.60"

# gRPC
tonic = "0.8"
prost = "0.11.8"

# retry
backoff = { version = "0.4.0", features = ["tokio"] }

# testing
[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.11"
pretty_assertions = "1"

[build-dependencies]
tonic-build = { version = "0.8.3", optional = true }

[features]
default = []
gen-proto = ["dep:tonic-build"]

[[test]]
path = "tests/ethereum_integration_tests.rs"
name = "ethereum_integration_tests"
test = false

[[test]]
path = "tests/atomic_commitment_integration_test.rs"
name = "atomic_commitment_integration_test"
test = false
