[package]
name = "gen-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0" }
ethers-contract = { version = "1.0.0", features = ["abigen"] }
color-eyre = "0.6.0"
log = "0.4.17"
sensible-env-logger = "0.3.1"
